tests/sksl/errors/BadOctal.glsl
### Compilation failed:

error: 1: '08' is not a valid octal number
error: 1: expected expression, but found '08'
2 errors
